--- a/_includes/header.html
+++ b/_includes/header.html
@@ -63,7 +63,7 @@
     <h2>{{ site.data.i18n.general.head.youarehere[page.lang] }}:</h2>
     <div class="container">
       <ol class="breadcrumb">
-        <li><a href="{{ site.baseurl }}/{{ page.lang }}/index.html">{{ site.data.i18n.general.head.home[page.lang] }}</a></li>
+        <li><a href="./index.html">{{ site.data.i18n.general.head.home[page.lang] }}</a></li>
 
         {%- if page.ref == 'docs' -%}
           <li>{{ site.data.i18n.general.nav.doc[page.lang] }}</li>
