--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8">
   <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
-		  wet-boew.github.io/wet-boew/license-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
+		  wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.data.i18n.general.head.title[page.lang] | escape }}{% endif %}</title>
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <!-- Meta data -->
