--- a/_includes/form/components/label-i18n-group.html
+++ b/_includes/form/components/label-i18n-group.html
@@ -1,5 +1,5 @@
 {%- capture path -%}{{ include.prepend }}{{ include.title }}{%- endcapture -%}
 <label for="{{ include.prepend }}{{ include.lang }}{{ include.title }}{{ include.group }}"
   {%- if include.required == nil or include.required %} class="required"{% endif -%}
->{{ site.data.i18n.form[include.id][path].labels[include.group][include.lang][page.lang] }}
+><span class="field-name">{{ site.data.i18n.form[include.id][path].labels[include.group][include.lang][page.lang] }}</span>
 {%- if include.required == nil or include.required %} <strong class="required">({{ site.data.i18n.form.required[page.lang] }})</strong>{% endif %}</label>
