--- a/_includes/form/presets/newAdmin.html
+++ b/_includes/form/presets/newAdmin.html
@@ -6,7 +6,7 @@
 <button id="removeNewAdminButton" style = "position: absolute; top: 10px; right: 10px;" class="btn btn-default remove" type="button"><i class="glyphicon glyphicon-remove"></i></button>
 {%- endif %}
 {% include form/presets/orgLevel.html id=include.id %}
-{% include form/widgets/string.html id=id title="newAdminCode" rule="names" %}
+{% include form/widgets/string.html id=id title="newAdminCode" rule="unique-newadmincode" %}
 {% include form/presets/provinceSelect.html id=include.id %}
 {% include form/widgets/string-i18n.html id=id title="newAdminName" rule="alphanum-space" -%}
 </div>
