--- a/_includes/form/components/input.html
+++ b/_includes/form/components/input.html
@@ -2,5 +2,10 @@
   {%- if include.required == nil or include.required %} required="required"{% endif -%}
   {%- if include.value %} value="{{ include.value }}"{% endif -%}
   {%- if include.readonly %} readonly="readonly"{% endif -%}
-  {%- if include.rule %} {{ site.data.forms.rules[include.rule] }}="true"{% endif -%}
+  {%- if include.rule -%}
+    {%- assign rules = include.rule | split: ',' -%}
+    {%- for rule in rules -%}
+      {{ site.data.forms.rules[rule] }}="true"
+    {%- endfor -%}
+  {%- endif -%}
   {%- if include.style %} style="{{ include.style }}"{% endif -%} />
