--- a/_includes/form/components/input.html
+++ b/_includes/form/components/input.html
@@ -4,8 +4,6 @@
   {%- if include.readonly %} readonly="readonly"{% endif -%}
   {%- if include.rule -%}
     {%- assign rules = include.rule | split: ',' -%}
-    {%- for rule in rules -%}
-      {{ site.data.forms.rules[rule] }}="true"
-    {%- endfor -%}
+    {%- for rule in rules %} {{ site.data.forms.rules[rule] }}="true"{%- endfor -%}
   {%- endif -%}
-  {%- if include.style %} style="{{ include.style }}"{% endif -%} />
+  {%- if include.style %} style="{{ include.style }}"{% endif %} />
