Resolved error from renaming standards --> standard in JS

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,7 +52,7 @@
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/codeForm.js"></script>
 {%- endif -%}
-{%- if page.ref == "standardsForm" -%}
+{%- if page.ref == "standardForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/standardsForm.js"></script>
 {%- endif -%}
