Improved phone inputs & translation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,6 +45,7 @@
 <script src="../assets/js/src/more-group.js"></script>
 <script src="../assets/js/src/slugify.js"></script>
 <script src="../assets/js/src/date.js"></script>
+<script src="../assets/js/src/phoneinput.js"></script>
 {%- if page.ref == "adminForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
 {%- endif -%}
