--- a/_includes/form/components/input-group.html
+++ b/_includes/form/components/input-group.html
@@ -1,2 +1,2 @@
 <input class="form-control" id="{{ include.param.prepend }}{{ include.title }}{{ include.group }}" name="{{ include.param.prepend }}{{ include.title }}{{ include.group }}" type="{{ include.param.type | default: "text" }}"
-{%- if include.param.rule %} {{ site.data.forms.rules[include.param.rule] }}="true"{% endif -%} />
+{%- if include.param.rule %} {{ site.data.forms.rules[include.param.rule] }}="true"{% endif -%}{% if include.param.type == "tel" %} placeholder="123-456-7890"{% endif %} />
