--- a/_includes/header.html
+++ b/_includes/header.html
@@ -59,40 +59,7 @@
     </div>
   </nav>
 
-  <nav id="wb-bc" property="breadcrumb">
-    <h2>{{ site.data.i18n.general.head.youarehere[page.lang] }}:</h2>
-    <div class="container">
-      <ol class="breadcrumb">
-        <li><a href="./index.html">{{ site.data.i18n.general.head.home[page.lang] }}</a></li>
-
-        {%- if page.ref == 'docs' -%}
-          <li>{{ site.data.i18n.general.nav.doc[page.lang] }}</li>
-        {%- endif -%}
-
-        {%- if page.ref == 'code' -%}
-          <li>{{ site.data.i18n.general.nav.code[page.lang] }}</li>
-        {%- elsif page.ref == 'software' -%}
-          <li>{{ site.data.i18n.general.nav.software[page.lang] }}</li>
-        {%- elsif page.ref == 'standard' -%}
-          <li>{{ site.data.i18n.general.nav.standard[page.lang] }}</li>
-        {%- endif -%}
-
-        {%- if page.ref == 'codeForm' or page.ref == 'codeGroups' -%}
-          <li><a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}">{{ site.data.i18n.general.nav.code[page.lang] }}</a></li>
-        {%- elsif page.ref == 'softwareForm' -%}
-          <li><a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}">{{ site.data.i18n.general.nav.software[page.lang] }}</a></li>
-        {%- elsif page.ref == 'standardForm' -%}
-          <li><a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}">{{ site.data.i18n.general.nav.standard[page.lang] }}</a></li>
-        {%- endif -%}
-
-        {%- if page.ref == 'codeForm' or page.ref == 'softwareForm' or page.ref == 'standardForm' -%}
-          <li>{{ site.data.i18n.general.nav.form[page.lang] }}</li>
-        {%- elsif page.ref == 'codeGroups' -%}
-          <li>{{ site.data.i18n.general.nav.groups[page.lang] }}</li>
-        {%- endif -%}
-      </ol>
-    </div>
-  </nav>
+  {% include breadcrumbs.html %}
 </header>
 
 <main property="mainContentOfPage" class="container">
