--- a/_includes/form/components/label-group.html
+++ b/_includes/form/components/label-group.html
@@ -1,6 +1,6 @@
 {%- capture path -%}{{ include.param.prepend }}{{ include.title }}{%- endcapture -%}
 <label for="{{ path }}{{ include.group }}"
-{%- include form/components/required_class.html required=include.param.required -%}
+{%- if include.param.required == nil or include.param.required %} class="required"{% endif -%}
 >{{ site.data.i18n.form[include.id][path].labels[include.group][page.lang] }}
 {%- include form/components/required.html required=include.param.required -%}
 </label>
