--- a/_includes/form/components/label-i18n.html
+++ b/_includes/form/components/label-i18n.html
@@ -1,5 +1,5 @@
 <label for="{{ include.param.prepend }}{{ include.lang }}{{ include.title }}"
-{%- include form/components/required_class.html required=include.param.required -%}
+{%- if include.param.required == nil or include.param.required %} class="required"{% endif -%}
 >{{ site.data.i18n.form[include.id][path].label[include.lang][page.lang] }}
 {%- include form/components/required.html required=include.param.required -%}
 </label>
