Fixed required include

--- a/_includes/form/components/required.html
+++ b/_includes/form/components/required.html
@@ -1,1 +1,1 @@
-{%- if include.param.required == nil or include.param.required %} <strong class="required">({{ site.data.i18n.form.required[page.lang] }})</strong>{% endif %}
+{%- if include.required == nil or include.required %} <strong class="required">({{ site.data.i18n.form.required[page.lang] }})</strong>{% endif %}
