--- a/_includes/form/presets/tags.html
+++ b/_includes/form/presets/tags.html
@@ -1,19 +1,40 @@
 {%- assign title = "tags" -%}
 {%- include form/components/title.html id=include.id title=title -%}
-<div id="tags">
-  <div id="tagsEN" class="form-group">
-    {% include form/components/label-i18n.html id=include.id title=title lang="en" %}
-    <div class="control-group input-group col-xs-2 mrgn-tp-md">
-      <input type="text" id="en{{ title }}" name="en{{ title }}" class="form-control" required="required">
+{% if page.lang == "en" %}
+  <div id="tags">
+    <div id="tagsEN" class="form-group">
+      {% include form/components/label-i18n.html id=include.id title=title lang="en" %}
+      <div class="control-group input-group col-xs-2 mrgn-tp-md">
+        <input type="text" id="en{{ title }}" name="en{{ title }}" class="form-control" required="required">
+      </div>
+    </div>
+    <div id="tagsFR" class="form-group">
+      {% include form/components/label-i18n.html id=include.id title=title lang="fr" %}
+      <div class="control-group input-group col-xs-2 mrgn-tp-md">
+        <input type="text" id="fr{{ title }}" name="fr{{ title }}" class="form-control" required="required">
+      </div>
     </div>
   </div>
-  <div id="tagsFR" class="form-group">
-    {% include form/components/label-i18n.html id=include.id title=title lang="fr" %}
-    <div class="control-group input-group col-xs-2 mrgn-tp-md">
-      <input type="text" id="fr{{ title }}" name="fr{{ title }}" class="form-control" required="required">
+  <div class="input-group control-group after-add-more col-xs-2">
+    <button class="btn btn-primary add-more" type="button"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form[include.id][title].button[page.lang] }}</button>
+  </div>
+{% endif %}
+{% if page.lang == "fr" %}
+  <div id="tags">
+    <div id="tagsEN" class="form-group">
+      {% include form/components/label-i18n.html id=include.id title=title lang="fr" %}
+      <div class="control-group input-group col-xs-2 mrgn-tp-md">
+        <input type="text" id="fr{{ title }}" name="fr{{ title }}" class="form-control" required="required">
+      </div>
+    </div>
+    <div id="tagsFR" class="form-group">
+      {% include form/components/label-i18n.html id=include.id title=title lang="en" %}
+      <div class="control-group input-group col-xs-2 mrgn-tp-md">
+        <input type="text" id="en{{ title }}" name="en{{ title }}" class="form-control" required="required">
+      </div>
     </div>
   </div>
-</div>
-<div class="input-group control-group after-add-more col-xs-2">
-  <button class="btn btn-primary add-more" type="button"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form[include.id][title].button[page.lang] }}</button>
-</div>
+  <div class="input-group control-group after-add-more col-xs-2">
+    <button class="btn btn-primary add-more" type="button"><i class="glyphicon glyphicon-plus"></i> {{ site.data.i18n.form[include.id][title].button[page.lang] }}</button>
+  </div>
+{% endif %}
