--- a/_includes/codeLastUpdated.html
+++ b/_includes/codeLastUpdated.html
@@ -35,5 +35,5 @@
 <ul>
   <li><a href="{{ repoUrl_array[0] }}" target="_blank">{{ projectName_array[0] }}</a></li>
   <li><a href="{{ repoUrl_array[1] }}" target="_blank">{{ projectName_array[1] }}</a></li>
-  <li><a href="{{ rerepoUrl_array[2]po2 }}" target="_blank">{{ projectName_array[2] }}</a></li>
+  <li><a href="{{ repoUrl_array[2] }}" target="_blank">{{ projectName_array[2] }}</a></li>
 </ul>
