--- a/_includes/form/presets/selectSoftware.html
+++ b/_includes/form/presets/selectSoftware.html
@@ -4,8 +4,8 @@
   {% include form/components/label-group.html id=include.id title=title group=group required=false %}
   <select class="form-control" id="{{ title }}{{ group }}" name="{{ title }}{{ group }}">
     <option value="">&nbsp;</option>
-    {%- for oss in site.data.logiciels_libres-open_source_software -%}
-    {%- assign software = oss[1] %}
+    {%- for softwares in site.data.software -%}
+    {%- assign software = softwares[1] %}
     <option class="additional-option" value="{{ software.name[page.lang] | downcase }}">{{ software.name[page.lang] }}</option>
     {%- endfor %}
   </select>
