--- a/_includes/softwareTable.html
+++ b/_includes/softwareTable.html
@@ -21,9 +21,9 @@
         <select class="form-control" id="dt_licence" name="dt_licence" data-column="2">
           <option value="">&nbsp;</option>
           {%- assign license_array = "" | split: ',' -%}
-          {%- for logiciels in site.data.logiciels_libres-open_source_software -%}
-            {%- assign oss = logiciels[1] -%}
-            {%- for license in oss.licenses -%}
+          {%- for softwares in site.data.software -%}
+            {%- assign software = softwares[1] -%}
+            {%- for license in software.licenses -%}
               {%- assign license_array = license_array | push: license.spdxID -%}
             {%- endfor -%}
           {%- endfor -%}
@@ -39,9 +39,9 @@
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="3">
           <option value="">&nbsp;</option>
           {%- assign tag_array = "" | split: ',' -%}
-          {%- for logiciels in site.data.logiciels_libres-open_source_software -%}
-            {%- assign oss = logiciels[1] -%}
-            {%- for tag in oss.tags[page.lang] -%}
+          {%- for softwares in site.data.software -%}
+            {%- assign software = softwares[1] -%}
+            {%- for tag in software.tags[page.lang] -%}
               {%- assign tag_array = tag_array | push: tag -%}
             {%- endfor -%}
           {%- endfor -%}
@@ -82,25 +82,25 @@
     </thead>
     <tbody>
 
-      {%- for logiciels in site.data.logiciels_libres-open_source_software -%}
-        {%- assign oss = logiciels[1] -%}
+      {%- for softwares in site.data.software -%}
+        {%- assign software = softwares[1] -%}
         <tr>
-          <td><a href="#{{ oss.name[page.lang] | slugify }}" aria-controls="{{ oss.name[page.lang] | slugify }}" class="overlay-lnk" role="button">{{ oss.name[page.lang] }}</a></td>
-          <td>{{ oss.description[page.lang] }}</td>
+          <td><a href="#{{ software.name[page.lang] | slugify }}" aria-controls="{{ software.name[page.lang] | slugify }}" class="overlay-lnk" role="button">{{ software.name[page.lang] }}</a></td>
+          <td>{{ software.description[page.lang] }}</td>
           <td>
-            {%- for license in oss.licenses -%}
+            {%- for license in software.licenses -%}
               <a href="{{ license.URL[page.lang] }}" target="_blank">{{ license.spdxID }}</a>&nbsp;
             {%- endfor -%}
           </td>
           <td>
-            {%- for tag in oss.tags[page.lang] -%}
+            {%- for tag in software.tags[page.lang] -%}
               {{ tag }}&nbsp;
             {%- endfor -%}
           </td>
-          <td>{{ oss.administrations.size }}</td>
-          <td><a href="{{ oss.homepageURL[page.lang] }}" target="_blank">{{ oss.homepageURL[page.lang] | remove: "https://" | rstrip }}</a></td>
+          <td>{{ software.administrations.size }}</td>
+          <td><a href="{{ software.homepageURL[page.lang] }}" target="_blank">{{ software.homepageURL[page.lang] | remove: "https://" | rstrip }}</a></td>
           <td>
-            {% for administration in oss.administrations %}
+            {% for administration in software.administrations %}
             {% assign aName = site.data.administrations.federal | where: "code", administration.adminCode %}
               {% if aName[0].name[page.lang] != nil %}
                 {{ site.data.i18n.administrations.federal[page.lang] }}
@@ -127,17 +127,17 @@
 </div>
 
 <!-- Modal Lightboxes -->
-{%- for logiciels in site.data.logiciels_libres-open_source_software -%}
-  {%- assign oss = logiciels[1] -%}
+{%- for softwares in site.data.software -%}
+  {%- assign software = softwares[1] -%}
 
-    <section id="{{ oss.name[page.lang] | slugify }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
+    <section id="{{ software.name[page.lang] | slugify }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
       <header class="modal-header">
-        <h2 class="modal-title">{{ oss.name[page.lang] }}</h2>
+        <h2 class="modal-title">{{ software.name[page.lang] }}</h2>
       </header>
       <div class="modal-body">
-        <p><strong>{{ oss.description[page.lang] }}</strong></p>
+        <p><strong>{{ software.description[page.lang] }}</strong></p>
         <p>Is being used by:</p>
-        {%- for admin in oss.administrations -%}
+        {%- for admin in software.administrations -%}
           <div class="row">
             {%- assign aNameFederal = site.data.administrations.federal | where: "code", admin.adminCode -%}
             {%- assign aNameProvincial = site.data.administrations.provincial | where: "code", admin.adminCode -%}
