--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,9 +51,9 @@
 <script src="../assets/js/src/adminForm.js"></script>
 <script src="../assets/js/src/codeForm.js"></script>
 {%- endif -%}
-{%- if page.ref == "standardsForm" -%}
+{%- if page.ref == "standardForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
-<script src="../assets/js/src/standardsForm.js"></script>
+<script src="../assets/js/src/standardForm.js"></script>
 {%- endif -%}
 {%- if page.ref == "softwareForm" -%}
 <script src="../assets/js/src/adminForm.js"></script>
