Moved breadcrumbs to a separated file

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -59,25 +59,7 @@
     </div>
   </nav>
 
-  <nav id="wb-bc" property="breadcrumb">
-    <h2>{{ site.data.i18n.general.head.youarehere[page.lang] }}:</h2>
-    <div class="container">
-      <ol class="breadcrumb">
-        <li><a href="{{ site.data.i18n.general.nav.Canada.link[page.lang] }}">{{ site.data.i18n.general.head.home[page.lang] }}</a></li>
-        {% if page.ref != "home" -%}
-          <li><a href="{{ site.data.i18n.general.nav.home.link[page.lang] }}">{{ site.data.i18n.general.nav.home[page.lang] }}</a></li>
-        {%- endif -%}
-
-        {% if page.ref == "codeGroups" or page.ref == "codeSchema" or page.ref == "codeForm" -%}
-          <li><a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}">{{ site.data.i18n.general.nav.code[page.lang] }}</a></li>
-        {%- endif -%}
-
-        {% if page.ref == "softwareSchema" -%}
-          <li><a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}">{{ site.data.i18n.general.nav.software[page.lang] }}</a></li>
-        {%- endif %}
-      </ol>
-    </div>
-  </nav>
+  {% include breadcrumbs.html %}
 </header>
 
 <main property="mainContentOfPage" class="container">
