--- a/_includes/form/components/input-i18n.html
+++ b/_includes/form/components/input-i18n.html
@@ -1,6 +1,7 @@
-<input class="form-control" id="{{ include.prepend }}{{ include.lang }}{{ include.title }}" name="{{ include.prepend }}{{ include.lang }}{{ include.title }}" maxlength="150" type="{{ include.type | default: "text" }}"
+<input class="form-control" id="{{ include.prepend }}{{ include.lang }}{{ include.title }}" name="{{ include.prepend }}{{ include.lang }}{{ include.title }}" type="{{ include.type | default: "text" }}"
   {%- if include.required == nil or include.required %} required="required"{% endif -%}
   {%- if include.value %} value="{{ include.value }}"{% endif -%}
+  {%- if include.maxLength %} maxlength="{{ include.maxLength }}"{% endif -%}
   {%- if include.readonly %} readonly="readonly"{% endif -%}
   {%- if include.rule -%}
     {%- assign rules = include.rule | split: ',' -%}
