--- a/_includes/form/presets/description.html
+++ b/_includes/form/presets/description.html
@@ -3,12 +3,12 @@
 <div class="row">
 <div class="col-sm-6">
 <h3>{{ site.data.i18n.form.presets.description.labels.what.subtitle[page.lang] }} </h3>
-<h6><small>{{ site.data.i18n.form.presets.description.charactersLimit[page.lang] }}</small> </h6>
+<p><small style="font-size: 11.4px">{{ site.data.i18n.form.presets.description.charactersLimit[page.lang] }}</small> </p>
 {%- include form/components/textarea-i18n.html id=include.id title=title group="what" -%}
 </div>
 <div class="col-sm-6">
 <h3>{{ site.data.i18n.form.presets.description.labels.how.subtitle[page.lang] }} </h3>
-<h6><small>{{ site.data.i18n.form.presets.description.charactersLimit[page.lang] }}</small></h6>
+<p><small style="font-size: 11.4px">{{ site.data.i18n.form.presets.description.charactersLimit[page.lang] }}</small></p>
 {%- include form/components/textarea-i18n.html id=include.id title=title group="how" required=false -%}
 </div>
 </div>
