--- a/_includes/form/presets/selectCode.html
+++ b/_includes/form/presets/selectCode.html
@@ -8,4 +8,5 @@
 </div>
 
 {% include form/components/title.html id=include.id title=title -%}
-{% include form/components/group-i18n.html id=include.id title=title -%}
+<p><small style="font-size: 11.4px">{{ site.data.i18n.form.code.name.charactersLimit[page.lang] }}</small></p>
+{% include form/components/group-i18n.html id=include.id title=title maxLength=100 -%}
