--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,4 +20,14 @@
 	<![endif]-->
   <!--[if lte IE 9]> <![endif]-->
   <noscript><link rel="stylesheet" href="{{ site.wet_cdts_hosturl }}/{{ site.wet_cdts_version }}/css/noscript.min.css" /></noscript>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145013064-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-145013064-1');
+  </script>
+
 </head>
