--- a/_includes/form/widgets/select-group.html
+++ b/_includes/form/widgets/select-group.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-  {%- include form/components/label-group.html id=include.id title=include.title required=include.required group=include.group -%}
+  {%- include form/components/label-group.html id=include.id title=include.title group=include.group param=include.param -%}
   <select class="form-control" id="{{ include.title }}" name="{{ include.title }}"{% if include.param.required == nil or include.param.required %} required="required"{% endif %}>
     <option value="">&nbsp;</option>
     {%- for option in include.param.options -%}
