--- a/_includes/form/widgets/select.html
+++ b/_includes/form/widgets/select.html
@@ -1,6 +1,6 @@
 {%- include form/components/title.html id=include.id title=include.title param=include.param -%}
 <div class="form-group">
-  {%- include form/components/label.html id=include.id title=include.title required=include.required -%}
+  {%- include form/components/label.html id=include.id title=include.title param=include.param -%}
   <select class="form-control" id="{{ include.title }}" name="{{ include.title }}"{% if include.param.required == nil or include.param.required %} required="required"{% endif %}>
     <option value="">&nbsp;</option>
     {%- for option in include.param.options -%}
