Added .param to schema files

--- a/_includes/form/presets/languages.html
+++ b/_includes/form/presets/languages.html
@@ -3,21 +3,19 @@
 
 <div class="form-group">
   <label>{{ site.data.i18n.form[include.idPreset][title].label[page.lang] }}</label>
-  {%- assign languages_arr = "" | split: "," -%}
-  {%- for fptms in site.data.code -%}
-  {%- assign fptm = fptms[1] -%}
-  {%- for admins in fptm -%}
-    {%- assign admin = admins[1] -%}
-    {%- for release in admin.releases -%}
+  {%- assign lang_arr = "" | split: "," -%}
+  {%- for govLevels in site.data.code -%}
+  {%- for admins in govLevels[1] -%}
+    {%- for release in admins[1].releases -%}
       {%- for language in release.languages -%}
-        {%- assign languages_arr = languages_arr  | push: language -%}
+        {%- assign lang_arr = lang_arr  | push: language -%}
       {%- endfor -%}
     {%- endfor -%}
     {%- endfor -%}
   {%- endfor %}
   <div id="{{ title }}" class="form-group">
-    {%- assign languages_arr = languages_arr | uniq  -%}
-    {%- for language in languages_arr %}
+    {%- assign lang_arr = lang_arr | uniq  -%}
+    {%- for language in lang_arr %}
     <div class="checkbox"><label><input class="{{ language }}" data-for="languages" type="checkbox" value="{{ language }}" name="{{ language }}">{{ language }}</label></div>
     {%- endfor %}
   </div>
