--- a/_includes/schema/presets/relatedCode.html
+++ b/_includes/schema/presets/relatedCode.html
@@ -2,10 +2,10 @@
 <li>
   <details open>
     <summary>{{ title }} [array]</summary>
-    <p>{{ site.data.i18n.form[include.id][title].title[page.lang] }}</p>
+    <p>{{ site.data.i18n.form[include.idPreset][title].title[page.lang] }}</p>
     <ul class="list-unstyled">
-      {%- include schema/components/li-i18n-group.html id=include.id title=title group="URL" required=false -%}
-      {%- include schema/components/li-i18n-group.html id=include.id title=title group="name" required=false -%}
+      {%- include schema/components/li-i18n-group.html id=include.idPreset title=title group="URL" param=site.data.forms.param.relatedCode.URL -%}
+      {%- include schema/components/li-i18n-group.html id=include.idPreset title=title group="name" param=site.data.forms.param.relatedCode.name -%}
     </ul>
   </details>
 </li>
