--- a/_includes/schema/presets/schemaVersion.html
+++ b/_includes/schema/presets/schemaVersion.html
@@ -1,1 +1,1 @@
-{%- include schema/components/li.html id=include.id title="schemaVersion" -%}
+{%- include schema/components/li.html id="presets" title="schemaVersion" -%}
