--- a/_includes/schema/presets/selectCode.html
+++ b/_includes/schema/presets/selectCode.html
@@ -1,1 +1,1 @@
-{%- include schema/widgets/string-i18n.html id="code" title="name" -%}
+{%- include schema/widgets/string-i18n.html id=include.id title="name" -%}
