--- a/_includes/schema/presets/tags.html
+++ b/_includes/schema/presets/tags.html
@@ -1,1 +1,1 @@
-{%- include schema/components/li-i18n.html id=include.id title="tags" type="array" -%}
+{%- include schema/components/li-i18n.html id=include.idPreset title="tags" type="array" -%}
