--- a/_includes/schema/widgets/string-i18n.html
+++ b/_includes/schema/widgets/string-i18n.html
@@ -1,1 +1,1 @@
-{%- include schema/components/li-i18n.html id=include.id title=include.title required=include.required prepend=include.prepend more=include.more -%}
+{%- include schema/components/li-i18n.html id=include.id title=include.title param=include.param -%}
