--- a/_includes/schema/components/li-i18n-group.html
+++ b/_includes/schema/components/li-i18n-group.html
@@ -1,13 +1,11 @@
 <li>
   <details open>
-    <summary>{{ include.group }}
-      {%- if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [array]
-    </summary>
+    <summary>{{ include.group }} {% include schema/components/required.html required=include.param.required %} [array]</summary>
     <h5>{{ site.data.i18n.form[include.id][include.title].labels[include.group].schema[page.lang] }}</h5>
     <p>{{ site.data.i18n.form[include.id][include.title].titles[include.group][page.lang] }}</p>
     <ul>
-      <li>{{ site.data.i18n.form[include.id][include.title].labels[include.group].en[page.lang] }}{% if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [{{ include.type | default: "string" }}]</li>
-      <li>{{ site.data.i18n.form[include.id][include.title].labels[include.group].fr[page.lang] }}{% if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [{{ include.type | default: "string" }}]</li>
+      <li>{{ site.data.i18n.form[include.id][include.title].labels[include.group].en[page.lang] }}{% if include.param.required == nil or include.param.required %} {% include schema/components/required.html %}{% endif %} [string]</li>
+      <li>{{ site.data.i18n.form[include.id][include.title].labels[include.group].fr[page.lang] }}{% if include.param.required == nil or include.param.required %} {% include schema/components/required.html %}{% endif %} [string]</li>
     </ul>
   </details>
 </li>
