--- a/_includes/schema/components/li-i18n.html
+++ b/_includes/schema/components/li-i18n.html
@@ -1,14 +1,12 @@
-{%- capture path -%}{{ include.prepend }}{{ include.title }}{%- endcapture -%}
+{%- capture path -%}{{ include.param.prepend }}{{ include.title }}{%- endcapture -%}
 <li>
   <details open>
-    <summary>{{ include.title }}
-      {%- if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [array]
-    </summary>
+    <summary>{{ include.title }} {% include schema/components/required.html required=include.param.required %} [array]</summary>
     <h5>{{ site.data.i18n.form[include.id][path].label.schema[page.lang] }}</h5>
     <p>{{ site.data.i18n.form[include.id][path].title[page.lang] }}</p>
     <ul>
-      <li>{{ site.data.i18n.form[include.id][path].label.en[page.lang] }}{% if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [{{ include.type | default: "string" }}]</li>
-      <li>{{ site.data.i18n.form[include.id][path].label.fr[page.lang] }}{% if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [{{ include.type | default: "string" }}]</li>
+      <li>{{ site.data.i18n.form[include.id][path].label.en[page.lang] }}{% if include.param.required == nil or include.param.required %} {% include schema/components/required.html %}{% endif %} [string]</li>
+      <li>{{ site.data.i18n.form[include.id][path].label.fr[page.lang] }}{% if include.param.required == nil or include.param.required %} {% include schema/components/required.html %}{% endif %} [string]</li>
     </ul>
   </details>
 </li>
