--- a/_includes/schema/components/li.html
+++ b/_includes/schema/components/li.html
@@ -1,8 +1,6 @@
 <li>
   <details open>
-    <summary>{{ include.title }}
-      {%- if include.required == nil or include.required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} {% if include.more %}[array]{% else %}[{{ include.type | default: "string" }}]{% endif %}
-    </summary>
+    <summary>{{ include.title }} {% include schema/components/required.html required=include.param.required %} {% if include.array or include.param.more %}[array]{% else %}[string]{% endif %}</summary>
     <h5>{{ site.data.i18n.form[include.id][include.title].label[page.lang] }}</h5>
     <p>{{ site.data.i18n.form[include.id][include.title].title[page.lang] }}</p>
   </details>
