--- a/_includes/schema/presets/contact.html
+++ b/_includes/schema/presets/contact.html
@@ -1,20 +1,15 @@
 {%- assign title = "contact" -%}
-{%- if include.required == nil or include.required == true -%}
-  {% assign required = true -%}
-{%- else -%}
-  {% assign required = false -%}
-{%- endif -%}
 <li>
   <details open>
-    <summary>{{ title }}{% if required %} <span class="bg-primary">{{ site.data.i18n.form.required[page.lang] }}</span>{% endif %} [array]</summary>
-    <p>{{ site.data.i18n.form[include.id][title].title[page.lang] }}</p>
+    <summary>{{ title }} {% include schema/components/required.html %} [array]</summary>
+    <p>{{ site.data.i18n.form[include.idPreset][title].title[page.lang] }}</p>
     <ul class="list-unstyled">
-      {%- include schema/components/li-i18n-group.html id=include.id title=title group="URL" required=false -%}
-      {%- include schema/components/li-group.html id=include.id title=title group="email" required=required -%}
-      {%- include schema/components/li-group.html id=include.id title=title group="name" required=false -%}
+      {%- include schema/components/li-i18n-group.html id=include.idPreset title=title group="URL" param=site.data.forms.param.contact.URL -%}
+      {%- include schema/components/li-group.html id=include.idPreset title=title group="email" param=site.data.forms.param.contact.email -%}
+      {%- include schema/components/li-group.html id=include.idPreset title=title group="name" param=site.data.forms.param.contact.name -%}
 
       {%- if include.phone == nil or include.phone == true  -%}
-        {%- include schema/components/li-group.html id=include.id title=title group="phone" required=false -%}
+        {%- include schema/components/li-group.html id=include.idPreset title=title group="phone" param=site.data.forms.param.contact.phone -%}
       {%- endif -%}
     </ul>
   </details>
