--- a/_includes/schema/presets/description.html
+++ b/_includes/schema/presets/description.html
@@ -1,1 +1,1 @@
-{%- include schema/components/li-i18n.html id="presets" title="description" -%}
+{%- include schema/components/li-i18n.html id=include.idPreset title="description" -%}
