--- a/_includes/schema/presets/homepageURL.html
+++ b/_includes/schema/presets/homepageURL.html
@@ -1,1 +1,1 @@
-{%- include schema/widgets/string-i18n.html id=include.id title="homepageURL" required=false -%}
+{%- include schema/widgets/string-i18n.html id=include.idPreset title="homepageURL" param=site.data.forms.param.homepageURL -%}
