--- a/_includes/schema/presets/languages.html
+++ b/_includes/schema/presets/languages.html
@@ -1,1 +1,1 @@
-{%- include schema/components/li.html id=include.id title="languages" type="array" required=false -%}
+{%- include schema/components/li.html id=include.idPreset title="languages" array=true param=site.data.forms.param.required_false -%}
