--- a/_includes/schema/presets/status.html
+++ b/_includes/schema/presets/status.html
@@ -1,1 +1,1 @@
-{%- include schema/components/li.html id=include.id title="status" required=false -%}
+{%- include schema/components/li.html id=include.idPreset title="status" param=site.data.forms.param.required_false -%}
