--- a/_includes/form/presets/provinceSelect.html
+++ b/_includes/form/presets/provinceSelect.html
@@ -6,9 +6,8 @@
 {%- include form/components/label.html id=include.idPreset title=title %}
   <select class="form-control" id="{{ title }}" name="{{ title }}" required="required">
     <option value="">&nbsp;</option>
-    {%- for provinces in site.data.i18n.provinces -%}
-    {%- assign province = provinces[1] %}
-    <option value="{{ province.value }}">{{ province[page.lang] }}</option>
+    {%- for province in site.data.i18n.provinces -%}
+    <option value="{{ province[1].value }}">{{ province[1][page.lang] }}</option>
     {%- endfor %}
   </select>
 </div>
