--- a/_includes/softwareTable.html
+++ b/_includes/softwareTable.html
@@ -6,12 +6,11 @@
     <summary><h4 class="h4">{{ site.data.i18n.tables.filterOptions[page.lang] }}</h4></summary>
     <form class="wb-tables-filter" data-bind-to="dataset-filter">
       <div class="form-group">
-        <label for="dt_govLevel">{{ site.data.i18n.tables.levelOfGovernment[page.lang] }}</label>
+        <label for="dt_govLevel">{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</label>
         <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="6">
           <option value="">&nbsp;</option>
-          {%- for govLevels in site.data.i18n.administrations -%}
-          {%- assign govLevel = govLevels[1] -%}
-          <option value="{{ govLevel.value }}">{{ govLevel[page.lang] }}</option>
+          {%- for govLevel in site.data.i18n.administrations -%}
+          <option value="{{ govLevel[1].value }}">{{ govLevel[1][page.lang] }}</option>
           {%- endfor -%}
         </select>
       </div>
@@ -20,15 +19,14 @@
         <label for="dt_licence">Licence</label>
         <select class="form-control" id="dt_licence" name="dt_licence" data-column="2">
           <option value="">&nbsp;</option>
-          {%- assign licence_array = "" | split: ',' -%}
-          {%- for softwares in site.data.software -%}
-            {%- assign software = softwares[1] -%}
-            {%- for licence in software.licences -%}
-              {%- assign licence_array = licence_array | push: licence.spdxID -%}
+          {%- assign licence_arr = "" | split: ',' -%}
+          {%- for software in site.data.software -%}
+            {%- for licence in software[1].licences -%}
+              {%- assign licence_arr = licence_arr | push: licence.spdxID -%}
             {%- endfor -%}
           {%- endfor -%}
-          {%- assign licence_array = licence_array | group_by: "" | sort: "name" -%}
-          {%- for licence in licence_array -%}
+          {%- assign licence_arr = licence_arr | group_by: "" | sort: "name" -%}
+          {%- for licence in licence_arr -%}
             <option value="{{ licence.name }}">{{ licence.name }}</option>
           {%- endfor -%}
         </select>
@@ -38,15 +36,14 @@
         <label for="dt_tag">Tag</label>
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="3">
           <option value="">&nbsp;</option>
-          {%- assign tag_array = "" | split: ',' -%}
-          {%- for softwares in site.data.software -%}
-            {%- assign software = softwares[1] -%}
-            {%- for tag in software.tags[page.lang] -%}
-              {%- assign tag_array = tag_array | push: tag -%}
+          {%- assign tag_arr = "" | split: ',' -%}
+          {%- for software in site.data.software -%}
+            {%- for tag in software[1].tags[page.lang] -%}
+              {%- assign tag_arr = tag_arr | push: tag -%}
             {%- endfor -%}
           {%- endfor -%}
-          {%- assign tag_array = tag_array | group_by: "" | sort: "name" -%}
-          {%- for tag in tag_array -%}
+          {%- assign tag_arr = tag_arr | group_by: "" | sort: "name" -%}
+          {%- for tag in tag_arr -%}
             <option value="{{ tag.name }}">{{ tag.name }}</option>
           {%- endfor -%}
         </select>
@@ -70,18 +67,16 @@
   <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [3,5,6], "visible": false}], "paging": true}'>
     <thead>
       <tr>
-        <!-- TODO: Translations, maybe use those from the form file -->
-        <th>Software</th>
-        <th>Description</th>
-        <th>Licence</th>
-        <th>Tags</th>
-        <th>Usage</th>
-        <th>Homepage</th>
-        <th>Level of government</th>
+        <th>{{ site.data.i18n.tables.software[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.licence[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.usage[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.homepage[page.lang] }}</th>
+        <th>{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</th>
       </tr>
     </thead>
     <tbody>
-
       {%- for softwares in site.data.software -%}
         {%- assign software = softwares[1] -%}
         <tr>
@@ -100,28 +95,18 @@
           <td>{{ software.administrations.size }}</td>
           <td><a href="{{ software.homepageURL[page.lang] }}" target="_blank">{{ software.homepageURL[page.lang] | remove: "https://" | rstrip }}</a></td>
           <td>
-            {% for administration in software.administrations %}
-            {% assign aName = site.data.administrations.federal | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.federal[page.lang] }}
-              {% endif %}
-            {% assign aName = site.data.administrations.provincial | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.provincial[page.lang] }}
-              {% endif %}
-            {% assign aName = site.data.administrations.municipal | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.municipal[page.lang] }}
-              {% endif %}
-            {% assign aName = site.data.administrations.aboriginal | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.aboriginal[page.lang] }}
-              {% endif %}
+            {%- for administration in software.administrations -%}
+              {%- for i in (1..4) -%}
+                {%- capture govLevel %}{% cycle 'federal', 'provincial', 'municipal', 'aboriginal' %}{% endcapture -%}
+                {%- assign admin = site.data.administrations[govLevel] | where: "code": administration.adminCode -%}
+                {%- if admin[0] != nil -%}
+                {{ site.data.i18n.administrations[govLevel].value }}&nbsp;
+                {%- endif -%}
+              {%- endfor -%}
             {% endfor %}
           </td>
         </tr>
       {%- endfor -%}
-
     </tbody>
   </table>
 </div>
@@ -129,7 +114,6 @@
 <!-- Modal Lightboxes -->
 {%- for softwares in site.data.software -%}
   {%- assign software = softwares[1] -%}
-
     <section id="{{ software.name[page.lang] | slugify }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
       <header class="modal-header">
         <h2 class="modal-title">{{ software.name[page.lang] }}</h2>
@@ -137,44 +121,24 @@
       <div class="modal-body">
         <p><strong>{{ software.description[page.lang] }}</strong></p>
         <p>Is being used by:</p>
-        {%- for admin in software.administrations -%}
+        {%- for administration in software.administrations -%}
           <div class="row">
-            {%- assign aNameFederal = site.data.administrations.federal | where: "code", admin.adminCode -%}
-            {%- assign aNameProvincial = site.data.administrations.provincial | where: "code", admin.adminCode -%}
-            {%- assign aNameMunicipal = site.data.administrations.municipal | where: "code", admin.adminCode -%}
-            {%- assign aNameAboriginal = site.data.administrations.aboriginal | where: "code", admin.adminCode %}
             <div class="col-md-7">
-              <strong>{{ aNameFederal[0].name[page.lang] }}</strong>
-              <strong>{{ aNameProvincial[0].name[page.lang] }}</strong>
-              <strong>{{ aNameMunicipal[0].name[page.lang] }}</strong>
-              <strong>{{ aNameAboriginal[0].name[page.lang] }}</strong>
+              {%- for i in (1..4) -%}
+                {%- capture govLevel %}{% cycle 'federal', 'provincial', 'municipal', 'aboriginal' %}{% endcapture -%}
+                {%- assign admin = site.data.administrations[govLevel] | where: "code", administration.adminCode -%}
+                <strong>{{ admin[0].name[page.lang] }}</strong>
+              {%- endfor -%}
             </div>
-            {%- for use in admin.uses -%}
-              {%- if use.contact.email != nil -%}
-                <div class="col-md-5">{{ use.contact.email }}</div>
-              {%- endif -%}
+            <div class="col-md-5">
+            {%- for use in administration.uses -%}
+              {{ use.contact.email }}<br />
             {%- endfor -%}
+            </div>
           </div>
         {%- endfor -%}
       </div>
     </section>
-
 {%- endfor -%}
 
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
