--- a/_includes/standardTable.html
+++ b/_includes/standardTable.html
@@ -6,12 +6,11 @@
     <summary><h4 class="h4">{{ site.data.i18n.tables.filterOptions[page.lang] }}</h4></summary>
     <form class="wb-tables-filter" data-bind-to="dataset-filter">
       <div class="form-group">
-        <label for="dt_govLevel">{{ site.data.i18n.tables.levelOfGovernment[page.lang] }}</label>
+          <label for="dt_govLevel">{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</label>
         <select class="form-control" id="dt_govLevel" name="dt_govLevel" data-column="4">
           <option value="">&nbsp;</option>
-          {%- for govLevels in site.data.i18n.administrations -%}
-          {%- assign govLevel = govLevels[1] -%}
-          <option value="{{ govLevel.value }}">{{ govLevel[page.lang] }}</option>
+          {%- for govLevel in site.data.i18n.administrations -%}
+          <option value="{{ govLevel[1].value }}">{{ govLevel[1][page.lang] }}</option>
           {%- endfor -%}
         </select>
       </div>
@@ -20,15 +19,14 @@
         <label for="dt_tag">Tag</label>
         <select class="form-control" id="dt_tag" name="dt_tag" data-column="3">
           <option value="">&nbsp;</option>
-          {%- assign tag_array = "" | split: ',' -%}
-          {%- for standards in site.data.standard -%}
-            {%- assign standard = standards[1] -%}
-            {%- for tag in standard.tags[page.lang] -%}
-              {%- assign tag_array = tag_array | push: tag -%}
+          {%- assign tag_arr = "" | split: ',' -%}
+          {%- for standard in site.data.standard -%}
+            {%- for tag in standard[1].tags[page.lang] -%}
+              {%- assign tag_arr = tag_arr | push: tag -%}
             {%- endfor -%}
           {%- endfor -%}
-          {%- assign tag_array = tag_array | group_by: "" | sort: "name" -%}
-          {%- for tag in tag_array -%}
+          {%- assign tag_arr = tag_arr | group_by: "" | sort: "name" -%}
+          {%- for tag in tag_arr -%}
             <option value="{{ tag.name }}">{{ tag.name }}</option>
           {%- endfor -%}
         </select>
@@ -52,16 +50,14 @@
   <table class="wb-tables table table-striped table-hover" id="dataset-filter" data-wb-tables='{"order": [0, "asc"], "columnDefs": [{"targets": [3,4], "visible": false}], "paging": true}'>
     <thead>
       <tr>
-        <!-- TODO:Translations, maybe use those from the form file -->
-        <th>Standard</th>
-        <th>Description</th>
-        <th>Organization</th>
-        <th>Tags</th>
-        <th>Level of government</th>
+        <th>{{ site.data.i18n.tables.standard[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.description[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.organization[page.lang] }}</th>
+        <th>{{ site.data.i18n.tables.tag[page.lang] }}</th>
+        <th>{{ site.data.i18n.form.presets.orgLevel.title[page.lang] }}</th>
       </tr>
     </thead>
     <tbody>
-
       {%- for standards in site.data.standard -%}
         {%- assign standard = standards[1] -%}
         <tr>
@@ -74,28 +70,18 @@
             {%- endfor -%}
           </td>
           <td>
-            {% for administration in standard.administrations %}
-            {% assign aName = site.data.administrations.federal | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.federal[page.lang] }}
-              {% endif %}
-            {% assign aName = site.data.administrations.provincial | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.provincial[page.lang] }}
-              {% endif %}
-            {% assign aName = site.data.administrations.municipal | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.municipal[page.lang] }}
-              {% endif %}
-            {% assign aName = site.data.administrations.aboriginal | where: "code", administration.adminCode %}
-              {% if aName[0].name[page.lang] != nil %}
-                {{ site.data.i18n.administrations.aboriginal[page.lang] }}
-              {% endif %}
+            {%- for administration in standard.administrations -%}
+              {%- for i in (1..4) -%}
+                {%- capture govLevel %}{% cycle 'federal', 'provincial', 'municipal', 'aboriginal' %}{% endcapture -%}
+                {%- assign admin = site.data.administrations[govLevel] | where: "code": administration.adminCode -%}
+                {%- if admin[0] != nil -%}
+                {{ site.data.i18n.administrations[govLevel].value }}&nbsp;
+                {%- endif -%}
+              {%- endfor -%}
             {% endfor %}
           </td>
         </tr>
       {%- endfor -%}
-
     </tbody>
   </table>
 </div>
@@ -103,7 +89,6 @@
 <!-- Modal Lightboxes -->
 {%- for standards in site.data.standard -%}
   {%- assign standard = standards[1] -%}
-
   <section id="{{ standard.name[page.lang] | slugify }}" class="wb-overlay modal-content overlay-def wb-popup-mid">
     <header class="modal-header">
       <h2 class="modal-title">{{ standard.name[page.lang] }}</h2>
@@ -111,25 +96,20 @@
     <div class="modal-body">
       <p><strong>{{ standard.description[page.lang] }}</strong></p>
       <p>Is being used by:</p>
-      {%- for admin in standard.administrations -%}
-        <div class="row">
-          {%- assign aNameFederal = site.data.administrations.federal | where: "code", admin.adminCode -%}
-          {%- assign aNameProvincial = site.data.administrations.provincial | where: "code", admin.adminCode -%}
-          {%- assign aNameMunicipal = site.data.administrations.municipal | where: "code", admin.adminCode -%}
-          {%- assign aNameAboriginal = site.data.administrations.aboriginal | where: "code", admin.adminCode -%}
-          <div class="col-md-7">
-            <strong>{{ aNameFederal[0].name[page.lang] }}</strong>
-            <strong>{{ aNameProvincial[0].name[page.lang] }}</strong>
-            <strong>{{ aNameMunicipal[0].name[page.lang] }}</strong>
-            <strong>{{ aNameAboriginal[0].name[page.lang] }}</strong>
+      {%- for administration in standard.administrations -%}
+          <div class="row">
+            <div class="col-md-7">
+              {%- for i in (1..4) -%}
+                {%- capture govLevel %}{% cycle 'federal', 'provincial', 'municipal', 'aboriginal' %}{% endcapture -%}
+                {%- assign admin = site.data.administrations[govLevel] | where: "code", administration.adminCode -%}
+                <strong>{{ admin[0].name[page.lang] }}</strong>
+              {%- endfor -%}
+            </div>
+            <div class="col-md-5">{{ administration.status }}</div>
           </div>
-          <div class="col-md-5">{{ admin.status }}</div>
-        </div>
-      {%- endfor -%}
-
+        {%- endfor -%}
     </div>
   </section>
-
 {%- endfor -%}
 
 </div>
